# StudyRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  styles.css
client/src/api/: client.ts
client/src/components/: ChatBubble.test.tsx  ChatBubble.tsx  CitationCard.test.tsx  CitationCard.tsx  ConfidenceBadge.tsx  DocumentStatusIndicator.tsx  UploadDropzone.tsx
client/src/pages/: ChatPage.tsx  CourseDetailPage.tsx  CoursesPage.tsx  LoginPage.tsx
client/src/types/: index.ts
eval/: __init__.py  course_material.py  golden_dataset.json  runner.py
eval/results/: latest.json  latest.md  retrieval_precision_pass.md  retrieval_synthesis_validation.md
migrations/: env.py
migrations/versions/: 20260702_0001_initial_schema.py
scripts/: smoke_deploy.py
src/studyrag_api/: __init__.py  app.py  auth.py  conversations.py  courses.py  dependencies.py  documents.py  rate_limit.py
src/studyrag_core/: __init__.py  chunking.py  embeddings.py  generation.py  models.py  rag.py  retrieval.py  text.py  text_extraction.py
src/studyrag_deploy/: __init__.py  runtime.py  seed_sample_course.py
src/studyrag_ingestion/: __init__.py  pipeline.py  storage.py
src/studyrag_persistence/: __init__.py  database.py  models.py  retrieval.py  services.py
tests/: test_chunking.py  test_ingestion_pipeline.py  test_phase4_api.py  test_postgres_persistence.py  test_retrieval_and_rag.py
(+33 files in other folders)
